Update files for Organizing My JS Code lessons 5 & 6

--- a/index4.html
+++ b/index4.html
@@ -10,7 +10,7 @@
       <script type='text/javascript' src='/crud.js'></script>
       <script type='text/javascript' src='/main.js'></script>
 
-        now it's like this -
+      now it's like this:
       <script type='text/javascript' src='/bundle.js'></script> 
     -->
   </head>
